fix: page jump switching b/w logon & register
fix page jump when switching between login and register tabs due to scrollbar.

VAN-574

--- a/src/redesign/_style.scss
+++ b/src/redesign/_style.scss
@@ -717,3 +717,10 @@ select.form-control {
     margin-bottom: 0;
   }
 }
+
+@media screen and (min-width: 960px) {
+  html {
+    margin-right: calc(100% - 100vw);
+    margin-left: 0;
+  }
+}
